--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,23 @@
-<p>header works!</p>
+<div class="container-fluid">
+    <div class="row">
+        <div class="text">
+            <h1 class="name-Store">CTS</h1>
+            <h5 class="slogan">child toy store</h5>
+        </div>
+    </div>
+</div>
+<div class="row">
+    <nav class="navbar navbar-default">
+        <div class="container-fluid nav-custom">
+            <ul class="nav navbar">
+                <li><a href="#">SẢN PHẨM</a></li>
+                <li><a href="#">ĐỘ TUỔI</a></li>
+                <li><a href="#">GIỚI TÍNH</a></li>
+                <li><a href="#">KHUYẾN MÃI</a></li>
+                <li><a href="#">HÀNG MỚI</a></li>
+                <li><a href="#">THƯƠNG HIỆU</a></li>
+            </ul>
+        </div>
+    </nav>
+</div>
+© 2021 GitHub, Inc.
