--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -13,9 +13,10 @@
                 <li><a href="#">SẢN PHẨM</a></li>
                 <li><a href="#">ĐỘ TUỔI</a></li>
                 <li><a href="#">GIỚI TÍNH</a></li>
-                <li><a href="#">KHUYẾN MÃI</a></li>
+                <li><a href="#">SẢN PHẨM KHUYẾN MÃI</a></li>
                 <li><a href="#">HÀNG MỚI</a></li>
                 <li><a href="#">THƯƠNG HIỆU</a></li>
+                <li><a href="#">THÀNH VIÊN</a></li>
             </ul>
         </div>
     </nav>
