bindding data from server

--- a/src/app/product-sale/product-sale.component.html
+++ b/src/app/product-sale/product-sale.component.html
@@ -1,1 +1,7 @@
-<p>product-sale works!</p>
+<app-header></app-header>
+<app-product-sale-list 
+    [saleProducts]="saleProducts"
+    (onAddToCart) = ""
+>
+</app-product-sale-list>
+<app-footer></app-footer>
