--- a/src/app/product-sale/product-sale-list/product-sale-list.component.html
+++ b/src/app/product-sale/product-sale-list/product-sale-list.component.html
@@ -1,1 +1,20 @@
-<p>product-sale-list works!</p>
+<ul class="products">
+        <li class="row" *ngFor="let saleProduct of saleProducts">
+        <div class="col left">
+            <div class="thumbnail">
+            <a href="#">
+                <img src="{{saleProduct.thumbnail}}" alt="" />
+            </a>
+            </div>
+            <div class="detail">
+            <div class="name"><a href="#">{{saleProduct.name}}</a></div>
+            <div class="description">
+                {{saleProduct.description}}
+            </div>
+            <div class="price">{{saleProduct.price | number: '1.2' | currency}}</div>
+            </div>
+            <button class="addToCart" (click)="addToCart(saleProduct)"> Add to Cart</button>
+            <button class="addToWishList">Add to WishList</button>                                                                                      
+        </div>
+    </li>
+</ul>
