--- a/src/app/shopping-cart/summary-cart/summary-cart.component.scss
+++ b/src/app/shopping-cart/summary-cart/summary-cart.component.scss
@@ -112,7 +112,7 @@
   
   header .count {
     float: right;
-    color: #b40c0c;
+    color: #333333;
     height: 20px;
     line-height: 20px;
   }
