--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+<!-- <a href="" routerLink="/sale-product"  >Go Sale Product</a>
+<a href="" [routerLink]="['/home']" routerLinkActive="router-link-active" >Go Home</a> -->
 <app-header></app-header>
-<app-footer></app-footer>
 <router-outlet></router-outlet>
