--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -13,10 +13,11 @@
                 <li><a href="#">SẢN PHẨM</a></li>
                 <li><a href="#">ĐỘ TUỔI</a></li>
                 <li><a href="#">GIỚI TÍNH</a></li>
-                <li><a [routerLink]="['/sale-product']" routerLinkActive="router-link-active" >SẢN PHẨM KHUYẾN MÃI</a></li>
+                <li><a [routerLink]="['/sale-product']">SẢN PHẨM KHUYẾN MÃI</a></li>
                 <li><a href="#">HÀNG MỚI</a></li>
                 <li><a href="#">THƯƠNG HIỆU</a></li>
                 <li><a href="#">THÀNH VIÊN</a></li>
+                <li><a href="#"[routerLink]="['/shopping-cart']" routerLinkActive="router-link-active" >CART</a></li>
             </ul>
         </div>
     </nav>
