--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -4,12 +4,13 @@
 }
 .text{
     height: 50px;
-    width: 100px;
+    width: 200px;
     margin-left: 120px;
+    text-align: center;
     .name-Store{
         font-weight: bold;
-        font-size: 30px;
-        font-family: initial;
+        font-size: 20px;
+        font-family: sans-serif;
         text-align: center;
     }
     .slogan{
