input data to sale product list

--- a/src/app/shopping-cart/product-list/product-list.component.html
+++ b/src/app/shopping-cart/product-list/product-list.component.html
@@ -11,7 +11,7 @@
           <div class="description">
             {{saleProduct.description}}
           </div>
-          <div class="price">{{saleProduct.price | number: '1.2' | currency}}</div>
+          <div class="price">{{saleProduct.basePrice | number: '1.2' | currency}}</div>
         </div>
       </div>
 
