--- a/src/app/product-sale/product-sale.component.html
+++ b/src/app/product-sale/product-sale.component.html
@@ -8,8 +8,10 @@
             </div>
             <div class="col-xl-9 col-lg-9 col-sm-12 col-xs-12 shop-content-right">
                 <app-product-sale-list
-                [saleProducts]="saleProducts"
-                (onAddToCart) = "addToCart($event)"
+                [allSaleProducts] = "allSaleProducts"
+                [saleProducts] = "saleProducts"
+                [pagination]   = "pagination"
+                (onAddToCart)  = "addToCart($event)"
                 >
                 </app-product-sale-list>
             </div>
