--- a/src/app/product-sale/product-sale-list/product-sale-list.component.html
+++ b/src/app/product-sale/product-sale-list/product-sale-list.component.html
@@ -40,7 +40,11 @@
                             </div>
                         </div>
                     </div>
+                    <!-- (onFistPage) = "fistPage()"
+                    (onNextPage) = "nextPage()"
+                    (onIndexPaginationChange) = "indexPaginationChange($event)" -->
                     <app-pagination
+                        [pagination] = "pagination"
                     >
                     </app-pagination>
                 </div>
