--- a/src/app/product-sale/product-sale-list/product-sale-list.component.html
+++ b/src/app/product-sale/product-sale-list/product-sale-list.component.html
@@ -43,10 +43,17 @@
                     <!-- (onFistPage) = "fistPage()"
                     (onNextPage) = "nextPage()"
                     (onIndexPaginationChange) = "indexPaginationChange($event)" -->
-                    <app-pagination
-                        [pagination] = "pagination"
-                    >
-                    </app-pagination>
+                    <nav aria-label="Page navigation example">
+                        <ul class="pagination justify-content-center">
+                          <li class="page-item disabled">
+                            <a class="page-link" href="#" tabindex="-1">Previous</a>
+                          </li>
+                          <li class="page-item" *ngFor="let item of visiblePagesNumber"><a (click)="indexPaginationChange(item)" class="page-link" >{{item}}</a></li>
+                          <li class="page-item">
+                            <a class="page-link" href="#">Next</a>
+                          </li>
+                        </ul>
+                      </nav>
                 </div>
             <div role="tabpanel" class="tab-pane fade" id="list-view">
                 <div class="list-view-box">
