--- a/src/app/product-sale/product-sale-list/product-sale-list.component.html
+++ b/src/app/product-sale/product-sale-list/product-sale-list.component.html
@@ -40,119 +40,45 @@
                             </div>
                         </div>
                     </div>
+                    <div>
+                        <ul class="pagination justify-content-center">
+                        <span *ngIf="pagination.indexPagination == 1; then trueCondition; else falseCondition"></span>
+                        <ng-template #trueCondition>
+                            <li class="page-item disabled" (click)="previousPage()">
+                                <a class="page-link">Trang trước</a>
+                            </li>
+                        </ng-template>
+                        <ng-template #falseCondition>
+                        <li class="page-item" (click)="previousPage()">
+                            <a class="page-link">Trang trước</a>
+                        </li>
+                        </ng-template>
+
+
+                        <li class="page-item" *ngFor="let index of visiblePagesNumber">
+                            <span *ngIf="pagination.indexPagination == index; then trueCondition1; else falseCondition1"></span>
+                            <ng-template #trueCondition1>
+                                <li class="page-item disabled">
+                                    <a style="color: #337ab7; background-color: #ebebeb" (click)="indexPaginationChange(index)" class="page-link" >{{index}}</a>
+                                </li>
+                            </ng-template>
+                            <ng-template #falseCondition1>
+                                <li class="page-item">
+                                    <a style="color: #337ab7;" (click)="indexPaginationChange(index)" class="page-link" >{{index}}</a>
+                                </li>
+                            </ng-template>
+                        </li>
+
+
+                        <li class="page-item" (click)= "nextPage()"> 
+                            <a class="page-link" style="width: 107.3px; height: 37.6px; text-align: center;" >Trang kế</a>
+                        </li>
+                        </ul>
+                    </div>
                     <!-- (onFistPage) = "fistPage()"
                     (onNextPage) = "nextPage()"
                     (onIndexPaginationChange) = "indexPaginationChange($event)" -->
-                    <nav aria-label="Page navigation example">
-                        <ul class="pagination justify-content-center">
-                          <li class="page-item disabled">
-                            <a class="page-link" href="#" tabindex="-1">Previous</a>
-                          </li>
-                          <li class="page-item" *ngFor="let item of visiblePagesNumber"><a (click)="indexPaginationChange(item)" class="page-link" >{{item}}</a></li>
-                          <li class="page-item">
-                            <a class="page-link" href="#">Next</a>
-                          </li>
-                        </ul>
-                      </nav>
                 </div>
-            <div role="tabpanel" class="tab-pane fade" id="list-view">
-                <div class="list-view-box">
-                    <div class="row">
-                        <div class="col-sm-6 col-md-6 col-lg-4 col-xl-4">
-                            <div class="products-single fix">
-                                <div class="box-img-hover">
-                                    <div class="type-lb">
-                                        <p class="new">New</p>
-                                    </div>
-                                    <img src="images/img-pro-01.jpg" class="img-fluid" alt="Image">
-                                    <div class="mask-icon">
-                                        <ul>
-                                            <li><a href="#" data-toggle="tooltip" data-placement="right" title="View"><i class="fas fa-eye"></i></a></li>
-                                            <li><a href="#" data-toggle="tooltip" data-placement="right" title="Compare"><i class="fas fa-sync-alt"></i></a></li>
-                                            <li><a href="#" data-toggle="tooltip" data-placement="right" title="Add to Wishlist"><i class="far fa-heart"></i></a></li>
-                                        </ul>
-
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-sm-6 col-md-6 col-lg-8 col-xl-8">
-                            <div class="why-text full-width">
-                                <h4>Lorem ipsum dolor sit amet</h4>
-                                <h5> <del>$ 60.00</del> $40.79</h5>
-                                <p>Integer tincidunt aliquet nibh vitae dictum. In turpis sapien, imperdiet quis magna nec, iaculis ultrices ante. Integer vitae suscipit nisi. Morbi dignissim risus sit amet orci porta, eget aliquam purus
-                                    sollicitudin. Cras eu metus felis. Sed arcu arcu, sagittis in blandit eu, imperdiet sit amet eros. Donec accumsan nisi purus, quis euismod ex volutpat in. Vestibulum eleifend eros ac lobortis aliquet.
-                                    Suspendisse at ipsum vel lacus vehicula blandit et sollicitudin quam. Praesent vulputate semper libero pulvinar consequat. Etiam ut placerat lectus.</p>
-                                <a class="btn hvr-hover" href="#">Add to Cart</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="list-view-box">
-                    <div class="row">
-                        <div class="col-sm-6 col-md-6 col-lg-4 col-xl-4">
-                            <div class="products-single fix">
-                                <div class="box-img-hover">
-                                    <div class="type-lb">
-                                        <p class="sale">Sale</p>
-                                    </div>
-                                    <img src="images/img-pro-02.jpg" class="img-fluid" alt="Image">
-                                    <div class="mask-icon">
-                                        <ul>
-                                            <li><a href="#" data-toggle="tooltip" data-placement="right" title="View"><i class="fas fa-eye"></i></a></li>
-                                            <li><a href="#" data-toggle="tooltip" data-placement="right" title="Compare"><i class="fas fa-sync-alt"></i></a></li>
-                                            <li><a href="#" data-toggle="tooltip" data-placement="right" title="Add to Wishlist"><i class="far fa-heart"></i></a></li>
-                                        </ul>
-
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-sm-6 col-md-6 col-lg-8 col-xl-8">
-                            <div class="why-text full-width">
-                                <h4>Lorem ipsum dolor sit amet</h4>
-                                <h5> <del>$ 60.00</del> $40.79</h5>
-                                <p>Integer tincidunt aliquet nibh vitae dictum. In turpis sapien, imperdiet quis magna nec, iaculis ultrices ante. Integer vitae suscipit nisi. Morbi dignissim risus sit amet orci porta, eget aliquam purus
-                                    sollicitudin. Cras eu metus felis. Sed arcu arcu, sagittis in blandit eu, imperdiet sit amet eros. Donec accumsan nisi purus, quis euismod ex volutpat in. Vestibulum eleifend eros ac lobortis aliquet.
-                                    Suspendisse at ipsum vel lacus vehicula blandit et sollicitudin quam. Praesent vulputate semper libero pulvinar consequat. Etiam ut placerat lectus.</p>
-                                <a class="btn hvr-hover" href="#">Add to Cart</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="list-view-box">
-                    <div class="row">
-                        <div class="col-sm-6 col-md-6 col-lg-4 col-xl-4">
-                            <div class="products-single fix">
-                                <div class="box-img-hover">
-                                    <div class="type-lb">
-                                        <p class="sale">Sale</p>
-                                    </div>
-                                    <img src="images/img-pro-03.jpg" class="img-fluid" alt="Image">
-                                    <div class="mask-icon">
-                                        <ul>
-                                            <li><a href="#" data-toggle="tooltip" data-placement="right" title="View"><i class="fas fa-eye"></i></a></li>
-                                            <li><a href="#" data-toggle="tooltip" data-placement="right" title="Compare"><i class="fas fa-sync-alt"></i></a></li>
-                                            <li><a href="#" data-toggle="tooltip" data-placement="right" title="Add to Wishlist"><i class="far fa-heart"></i></a></li>
-                                        </ul>
-
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-sm-6 col-md-6 col-lg-8 col-xl-8">
-                            <div class="why-text full-width">
-                                <h4>Lorem ipsum dolor sit amet</h4>
-                                <h5> <del>$ 60.00</del> $40.79</h5>
-                                <p>Integer tincidunt aliquet nibh vitae dictum. In turpis sapien, imperdiet quis magna nec, iaculis ultrices ante. Integer vitae suscipit nisi. Morbi dignissim risus sit amet orci porta, eget aliquam purus
-                                    sollicitudin. Cras eu metus felis. Sed arcu arcu, sagittis in blandit eu, imperdiet sit amet eros. Donec accumsan nisi purus, quis euismod ex volutpat in. Vestibulum eleifend eros ac lobortis aliquet.
-                                    Suspendisse at ipsum vel lacus vehicula blandit et sollicitudin quam. Praesent vulputate semper libero pulvinar consequat. Etiam ut placerat lectus.</p>
-                                <a class="btn hvr-hover" href="#">Add to Cart</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
         </div>
     </div>
 
