--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -42,7 +42,217 @@
 
         </div>
         <div class="product col-lg-9 col-md-9 col-sm-12 col-xs-12">
-            
+            <div class="product-grid ">
+                <ol class="product-list col-lg-12">
+
+                    <li class="product-items col-lg-4 col-md-4 col-sm-4 col-xs-6 " >
+                       <div class="product-info">
+                           <div class="product-info-img">
+                               <a href="" class="img">
+                                   <img src="../121271324_467898044172085_8593762770720055186_n.jpg" alt="">
+                               </a>
+                           </div>
+                           <div class="product-info-details">
+                               <h5 class="product-name">
+                                   <a href="" class="title">Lego xep hinh cho be trai va be gai</a>
+                               </h5>
+                               <div class="product-price">100.000 vnd</div>
+                               <div class="product-available">con hang</div>
+                           </div>
+                       </div>
+                    </li>
+
+                    <li class="product-items col-lg-4 col-md-4 col-sm-4 col-xs-6 " >
+                        <div class="product-info">
+                            <div class="product-info-img">
+                                <a href="" class="img">
+                                    <img src="../grw38_1_.jpg" alt="">
+                                </a>
+                            </div>
+                            <div class="product-info-details">
+                                <h5 class="product-name">
+                                    <a href="" class="title">Lego xep hinh cho be trai va be gai</a>
+                                </h5>
+                                <div class="product-price">100.000 vnd</div>
+                                <div class="product-available">con hang</div>
+                            </div>
+                        </div>
+                     </li>
+
+                     <li class="product-items col-lg-4 col-md-4 col-sm-4 col-xs-6 " >
+                        <div class="product-info">
+                            <div class="product-info-img">
+                                <a href="" class="img">
+                                    <img src="../grw38_1_.jpg" alt="">
+                                </a>
+                            </div>
+                            <div class="product-info-details">
+                                <h5 class="product-name">
+                                    <a href="" class="title">Lego xep hinh cho be trai va be gai</a>
+                                </h5>
+                                <div class="product-price">100.000 vnd</div>
+                                <div class="product-available">con hang</div>
+                            </div>
+                        </div>
+                     </li>
+
+                     <li class="product-items col-lg-4 col-md-4 col-sm-4 col-xs-6 " >
+                        <div class="product-info">
+                            <div class="product-info-img">
+                                <a href="" class="img">
+                                    <img src="../grw38_1_.jpg" alt="">
+                                </a>
+                            </div>
+                            <div class="product-info-details">
+                                <h5 class="product-name">
+                                    <a href="" class="title">Lego xep hinh cho be trai va be gai</a>
+                                </h5>
+                                <div class="product-price">100.000 vnd</div>
+                                <div class="product-available">con hang</div>
+                            </div>
+                        </div>
+                     </li>
+
+                     <li class="product-items col-lg-4 col-md-4 col-sm-4 col-xs-6 " >
+                        <div class="product-info">
+                            <div class="product-info-img">
+                                <a href="" class="img">
+                                    <img src="../grw38_1_.jpg" alt="">
+                                </a>
+                            </div>
+                            <div class="product-info-details">
+                                <h5 class="product-name">
+                                    <a href="" class="title">Lego xep hinh cho be trai va be gai</a>
+                                </h5>
+                                <div class="product-price">100.000 vnd</div>
+                                <div class="product-available">con hang</div>
+                            </div>
+                        </div>
+                     </li>
+
+                     <li class="product-items col-lg-4 col-md-4 col-sm-4 col-xs-6 " >
+                        <div class="product-info">
+                            <div class="product-info-img">
+                                <a href="" class="img">
+                                    <img src="../grw38_1_.jpg" alt="">
+                                </a>
+                            </div>
+                            <div class="product-info-details">
+                                <h5 class="product-name">
+                                    <a href="" class="title">Lego xep hinh cho be trai va be gai</a>
+                                </h5>
+                                <div class="product-price">100.000 vnd</div>
+                                <div class="product-available">con hang</div>
+                            </div>
+                        </div>
+                     </li>
+
+                     <li class="product-items col-lg-4 col-md-4 col-sm-4 col-xs-6 " >
+                        <div class="product-info">
+                            <div class="product-info-img">
+                                <a href="" class="img">
+                                    <img src="../grw38_1_.jpg" alt="">
+                                </a>
+                            </div>
+                            <div class="product-info-details">
+                                <h5 class="product-name">
+                                    <a href="" class="title">Lego xep hinh cho be trai va be gai</a>
+                                </h5>
+                                <div class="product-price">100.000 vnd</div>
+                                <div class="product-available">con hang</div>
+                            </div>
+                        </div>
+                     </li>
+
+                     <li class="product-items col-lg-4 col-md-4 col-sm-4 col-xs-6 " >
+                        <div class="product-info">
+                            <div class="product-info-img">
+                                <a href="" class="img">
+                                    <img src="../grw38_1_.jpg" alt="">
+                                </a>
+                            </div>
+                            <div class="product-info-details">
+                                <h5 class="product-name">
+                                    <a href="" class="title">Lego xep hinh cho be trai va be gai</a>
+                                </h5>
+                                <div class="product-price">100.000 vnd</div>
+                                <div class="product-available">con hang</div>
+                            </div>
+                        </div>
+                     </li>
+
+                     <li class="product-items col-lg-4 col-md-4 col-sm-4 col-xs-6 " >
+                        <div class="product-info">
+                            <div class="product-info-img">
+                                <a href="" class="img">
+                                    <img src="../grw38_1_.jpg" alt="">
+                                </a>
+                            </div>
+                            <div class="product-info-details">
+                                <h5 class="product-name">
+                                    <a href="" class="title">Lego xep hinh cho be trai va be gai</a>
+                                </h5>
+                                <div class="product-price">100.000 vnd</div>
+                                <div class="product-available">con hang</div>
+                            </div>
+                        </div>
+                     </li>
+
+                     <li class="product-items col-lg-4 col-md-4 col-sm-4 col-xs-6 " >
+                        <div class="product-info">
+                            <div class="product-info-img">
+                                <a href="" class="img">
+                                    <img src="../grw38_1_.jpg" alt="">
+                                </a>
+                            </div>
+                            <div class="product-info-details">
+                                <h5 class="product-name">
+                                    <a href="" class="title">Lego xep hinh cho be trai va be gai</a>
+                                </h5>
+                                <div class="product-price">100.000 vnd</div>
+                                <div class="product-available">con hang</div>
+                            </div>
+                        </div>
+                     </li>
+
+                     <li class="product-items col-lg-4 col-md-4 col-sm-4 col-xs-6 " >
+                        <div class="product-info">
+                            <div class="product-info-img">
+                                <a href="" class="img">
+                                    <img src="../grw38_1_.jpg" alt="">
+                                </a>
+                            </div>
+                            <div class="product-info-details">
+                                <h5 class="product-name">
+                                    <a href="" class="title">Lego xep hinh cho be trai va be gai</a>
+                                </h5>
+                                <div class="product-price">100.000 vnd</div>
+                                <div class="product-available">con hang</div>
+                            </div>
+                        </div>
+                     </li>
+
+                     <li class="product-items col-lg-4 col-md-4 col-sm-4 col-xs-6 " >
+                        <div class="product-info">
+                            <div class="product-info-img">
+                                <a href="" class="img">
+                                    <img src="../grw38_1_.jpg" alt="">
+                                </a>
+                            </div>
+                            <div class="product-info-details">
+                                <h5 class="product-name">
+                                    <a href="" class="title">Lego xep hinh cho be trai va be gai</a>
+                                </h5>
+                                <div class="product-price">100.000 vnd</div>
+                                <div class="product-available">con hang</div>
+                            </div>
+                        </div>
+                     </li>
+
+                   
+
+                </ol>
+            </div>
         </div>
     </div>
 </section>
