--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -77,9 +77,7 @@
     <!-- Section: Text -->
     <section class="mb-4">
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt distinctio earum
-        repellat quaerat voluptatibus placeat nam, commodi optio pariatur est quia magnam
-        eum harum corrupti dicta, aliquam sequi voluptate quas.
+        The place to create products with top quality in the world .
       </p>
     </section>
     <!-- Section: Text -->
@@ -88,8 +86,70 @@
     <section class="">
       <!--Grid row-->
       <div class="row">
+
+ <!--Grid column-->
+ <div class="col-lg-4 col-md-4 mb-4 mb-md-0">
+  <h5 class="text-uppercase">SẢN PHẨM</h5>
+
+  <ul class="list-unstyled mb-0">
+    <li>
+      <a href="#!" class="text-white">Logo xếp hình</a>
+    </li>
+    <li>
+      <a href="#!" class="text-white">Mô hình ,nhân vật</a>
+    </li>
+    <li>
+      <a href="#!" class="text-white">Điều khiển từ xa</a>
+    </li>
+    <li>
+      <a href="#!" class="text-white">Phụ kiện, đồ dùng</a>
+    </li>
+  </ul>
+</div>
+<!--Grid column-->
+
         <!--Grid column-->
-        <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+        <div class="col-lg-4 col-md-6 mb-4 mb-md-0">
+          <h5 class="text-uppercase">ĐỘ TUỔI</h5>
+
+          <ul class="list-unstyled mb-0">
+            <li>
+              <a href="#!" class="text-white">Dưới 3 tuổi</a>
+            </li>
+            <li>
+              <a href="#!" class="text-white">Từ 3 đến 12 tuổi</a>
+            </li>
+            <li>
+              <a href="#!" class="text-white">Trên 12 tuổi</a>
+            </li>
+           
+          </ul>
+        </div>
+        <!--Grid column-->
+
+       
+
+        <!--Grid column-->
+        <div class="col-lg-4 col-md-6 mb-4 mb-md-0">
+          <h5 class="text-uppercase">GIỚI TÍNH</h5>
+
+          <ul class="list-unstyled mb-0">
+            <li>
+              <a href="#!" class="text-white">Bé trai</a>
+            </li>
+            <li>
+              <a href="#!" class="text-white">Bé gái</a>
+            </li>
+            <li>
+              <a href="#!" class="text-white">Unisex</a>
+            </li>
+            
+          </ul>
+        </div>
+        <!--Grid column-->
+
+        <!--Grid column-->
+        <!-- <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
           <h5 class="text-uppercase">Links</h5>
 
           <ul class="list-unstyled mb-0">
@@ -106,70 +166,7 @@
               <a href="#!" class="text-white">Link 4</a>
             </li>
           </ul>
-        </div>
-        <!--Grid column-->
-
-        <!--Grid column-->
-        <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-          <h5 class="text-uppercase">Links</h5>
-
-          <ul class="list-unstyled mb-0">
-            <li>
-              <a href="#!" class="text-white">Link 1</a>
-            </li>
-            <li>
-              <a href="#!" class="text-white">Link 2</a>
-            </li>
-            <li>
-              <a href="#!" class="text-white">Link 3</a>
-            </li>
-            <li>
-              <a href="#!" class="text-white">Link 4</a>
-            </li>
-          </ul>
-        </div>
-        <!--Grid column-->
-
-        <!--Grid column-->
-        <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-          <h5 class="text-uppercase">Links</h5>
-
-          <ul class="list-unstyled mb-0">
-            <li>
-              <a href="#!" class="text-white">Link 1</a>
-            </li>
-            <li>
-              <a href="#!" class="text-white">Link 2</a>
-            </li>
-            <li>
-              <a href="#!" class="text-white">Link 3</a>
-            </li>
-            <li>
-              <a href="#!" class="text-white">Link 4</a>
-            </li>
-          </ul>
-        </div>
-        <!--Grid column-->
-
-        <!--Grid column-->
-        <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-          <h5 class="text-uppercase">Links</h5>
-
-          <ul class="list-unstyled mb-0">
-            <li>
-              <a href="#!" class="text-white">Link 1</a>
-            </li>
-            <li>
-              <a href="#!" class="text-white">Link 2</a>
-            </li>
-            <li>
-              <a href="#!" class="text-white">Link 3</a>
-            </li>
-            <li>
-              <a href="#!" class="text-white">Link 4</a>
-            </li>
-          </ul>
-        </div>
+        </div> -->
         <!--Grid column-->
       </div>
       <!--Grid row-->
@@ -181,7 +178,7 @@
   <!-- Copyright -->
   <div class="text-center p-3" style="background-color: rgba(10, 9, 9, 0.836);">
     © 2020 Copyright:
-    <a class="text-white" href="https://mdbootstrap.com/">MDBootstrap.com</a>
+    <a class="text-white" href="https://mdbootstrap.com/">CTS Company</a>
   </div>
   <!-- Copyright -->
 </footer>
