--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -8,5 +8,11 @@ footer{
     .button-size{
         height: 30px;
     }
-   
+    a{
+        text-decoration: none;
+        font-weight: 200px;
+    }
+    .text-uppercase{
+        text-decoration:underline;
+    }
 }
