--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -2,58 +2,53 @@
     padding: 0px;
     margin: 0px;
 }
-// .row-one{
-//     height: 50px;
-//     width: 1349px;
-//     .text{
-//         height: 50px;
-//         width: 200px;
-//         // margin-left: 120px;
-//         position: relative;
-//         left: 120px;
-//         text-align: center;
-//         .name-Store{
-//             font-weight: bold;
-//             font-size: 20px;
-//             font-family: sans-serif;
-//             text-align: center;
-//         }
-//         .slogan{
-//             font-weight: bold;
-//             margin-top: 0px;
-//         }
-//     }
-//     .icon{
-//        background-color: aqua;
-//        height: 50px;
-//        width: 50px;
-//        position: relative;
-//        left: 50px;
-//        top: 0px;
-//        .a{
-
-//        }
-//     }
-
-// }
 
 .nav-custom {
     background: crimson;
     font-weight: bold;
-    li {
-        margin-right: 40px;
-        font-size: 18px;
-        a {
-            text-decoration: none;
-            color: white;
-        }
-        a :hover {
-            background-color: yellowgreen;
-            color: black;
+    ul {
+        li {
+            margin-right: 40px;
+            font-size: 18px;
+            a {
+                text-decoration: none;
+                color: white;
+                z-index: 1;
+                // transition: all 0.5s;
+            }
+            a:hover {
+                // background-color: rgb(255, 255, 255);
+                color: crimson;
+                // background-color: white;
+                transition: all 1s;
+            }
+            a::after {
+                background-color: white;
+                content: "";
+                color: transparent;
+                display: block;
+                position: absolute;
+                top: 0;
+                left: 0;
+                bottom: 0;
+                right: 0;
+                margin: auto;
+                width: 100%;
+                height: 1px;
+                visibility: none;
+                opacity: 0;
+                transition: all 0.5s;
+                z-index: -1;
+            }
+            a:hover::after {
+                opacity: 1;
+                visibility: visible;
+                height: 100%;
+            }
         }
     }
 }
-.form-inline {
+.form-inlinee {
     display: flex;
     height: 50px;
     width: 100%;
@@ -75,23 +70,84 @@
         }
     }
     .icon {
-        margin-left: auto;
         height: 50px;
         width: 50%;
-      
-        .search{
-            width: 80%;
+        position: relative;
+        left: 500px;
+        a {
+            color: rgb(33, 36, 33);
+        }
+        .search {
+            width: 230px;
+            height: 30px;
+            position: relative;
+            left: 135px;
+            float: left;
+            line-height: 22px;
+        }
+
+        .search input {
+            position: absolute;
+            top: 3px;
+            width: 0px;
+            float: Left;
+            margin-left: 210px;
+            -webkit-transition: all 0.7s ease-in-out;
+            -moz-transition: all 0.7s ease-in-out;
+            -o-transition: all 0.7s ease-in-out;
+            transition: all 0.7s ease-in-out;
+            height: 30px;
+            line-height: 18px;
+            // padding: 0 2px 0 2px;
+            border-radius: 15px;
+        }
+
+        .search:hover input,
+        .search input:focus {
+            width: 200px;
+            margin-left: 0px;
+        }
+
+        .btn {
+            height: 35px;
+            width: 35px;
+            position: absolute;
+            right: 0px;
+            border-radius: 25px;
+            background-color: rgb(26, 111, 160);
+            color: blanchedalmond;
+        }
+        .cart {
             height: 50px;
-            margin-top: 10px;
-            .search-form{
-                .form-control{
-                    border-radius: 5px;
-                }
-                .btn{
-                    border-radius: 25px;
-                    margin-left: 5px;
-                }
+            width: 10%;
+            margin-left: 140px;
+
+            .cart-center {
+                font-size: 20px;
+                position: relative;
+                top: 10px;
+                left: 20px;
+            }
+        }
+        .email {
+            height: 50px;
+            width: 10%;
+            .email-center {
+                font-size: 20px;
+                position: relative;
+                top: 10px;
+                left: 9px;
+            }
+        }
+        .account {
+            height: 50px;
+            width: 10%;
+            .account-center {
+                font-size: 20px;
+                position: relative;
+                top: 10px;
             }
         }
     }
 }
+// effect nav
