--- a/src/app/product-sale/sidebar/sidebar.component.html
+++ b/src/app/product-sale/sidebar/sidebar.component.html
@@ -14,7 +14,7 @@
             <a class="list-group-item list-group-item-action">Sản phẩm</a>
             <a class="list-group-item list-group-item-action">Sản phẩm khuyến mãi</a>
             <a class="list-group-item list-group-item-action">Sản phẩm mới</a>
-            <a class="list-group-item list-group-item-action">Các thương hiệu</a>
+            <a class="list-group-item list-group-item-action">Các trang thương hiệu</a>
                 <!-- <div class="collapse show" id="sub-men1" data-parent="#list-group-men">
                     <div class="list-group">
                         <a href="#" class="list-group-item list-group-item-action active">T-Shirts <small class="text-muted">(50)</small></a>
