Binding data to member-car-list component

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -44,7 +44,7 @@
                 <li><a href="/gender">GIỚI TÍNH</a></li>
                 <li><a href="/sale-product">KHUYẾN MÃI</a></li>
                 <li><a href="/product-new">HÀNG MỚI</a></li>
-                <li><a href="/trademark">THƯƠNG HIỆU</a></li>
+                <li><a href="/member-cart">THƯƠNG HIỆU</a></li>
             </ul>
         </div>
     </nav>
