--- a/src/app/product-sale/sidebar/sidebar.component.html
+++ b/src/app/product-sale/sidebar/sidebar.component.html
@@ -12,9 +12,9 @@
         <div class="list-group list-group-collapse list-group-sm list-group-tree" id="list-group-men" data-children=".sub-men">
             <div class="list-group-collapse sub-men">
             <a class="list-group-item list-group-item-action">Sản phẩm</a>
-            <a class="list-group-item list-group-item-action">Sản phẩm khuyến mãi</a>
-            <a class="list-group-item list-group-item-action">Sản phẩm mới</a>
-            <a class="list-group-item list-group-item-action">Các trang thương hiệu</a>
+            <a class="list-group-item list-group-item-action" [routerLink]="['/sale-product']" routerLinkActive="router-link-active" >Sản phẩm khuyến mãi</a>
+            <a class="list-group-item list-group-item-action" >Sản phẩm mới</a>
+            <a class="list-group-item list-group-item-action" [routerLink]="['/member-cart']" routerLinkActive="router-link-active" >Các trang thương hiệu</a>
                 <!-- <div class="collapse show" id="sub-men1" data-parent="#list-group-men">
                     <div class="list-group">
                         <a href="#" class="list-group-item list-group-item-action active">T-Shirts <small class="text-muted">(50)</small></a>
@@ -41,7 +41,7 @@
 
     <div class="filter-brand-left">
         <div class="title-left">
-            <h3>Thương hiệu</h3>
+            <h3>Độ tuổi</h3>
         </div>
        
         <div class="form-check" *ngFor="let age of ages">
@@ -53,7 +53,7 @@
     </div>
     <div class="filter-brand-left">
         <div class="title-left">
-            <h3>Thương hiệu</h3>
+            <h3>Giới tính</h3>
         </div>
        
         <div class="form-check" *ngFor="let sex of sexs">
