--- a/src/app/product/product-sale-list/product-sale-list.component.scss
+++ b/src/app/product/product-sale-list/product-sale-list.component.scss
@@ -835,16 +835,34 @@ ul.cart-list > li.total > .btn:hover{
     padding: 15px;
 }
 .why-text h4{
-    font-size: 16px;
+    font-size: 18px;
     font-weight: 700;
     padding-bottom: 15px;
+    height: 80px;
 }
 .why-text h5{
-    font-size: 18px;
+    font-size: 14px;
     font-family: 'Montserrat', sans-serif;
     padding: 0px;
-    font-weight: 600;
+    font-weight: 500;
 }
+.why-text .price-box{
+    display: flex;
+    justify-content: space-between;
+}
+.why-text .price-box .basePrice{
+    font-size: 16px;
+    color: #444;
+    font-weight: 600;
+    text-decoration-line: line-through;
+    text-decoration-style: solid;
+}
+.why-text .price-box .priceToBuy{
+    color: #df494a;
+    font-size: 18px;
+    font-weight: 700;
+}
+
 .mask-icon{
     width: 100%;
     height: 100%;
@@ -1578,8 +1596,8 @@ ul.cart-list > li.total > .btn:hover{
 }
 .list-group-item {
     border: none;
-    padding: 3px 20px;
-    font-size: 15px;
+    padding: 5px 20px;
+    font-size: 14px;
 }
 .text-muted {
     padding: 10px 0px;
@@ -1681,6 +1699,7 @@ ul.cart-list > li.total > .btn:hover{
     -webkit-justify-content: space-between;
     justify-content: space-between;
     padding: 5px 0;
+    margin-top: 28px 0;
 }
 .nice-select.wide{
     width: 75%;
@@ -2360,7 +2379,4 @@ ul.cart-list > li.total > .btn:hover{
 .table-responsive .table td, .table-responsive .table th {
     vertical-align: middle;
     white-space: nowrap;
-}
-button::after{
-    content: '';
 }
