--- a/src/app/product/title-product/title-product.component.html
+++ b/src/app/product/title-product/title-product.component.html
@@ -1,15 +1,13 @@
-  <!-- Start All Title Box -->
-  <div class="all-title-box">
+<div class="all-title-box">
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
-                <h2>Sản phẩm khuyến mãi</h2>
+                <h2>Sản phẩm </h2>
                 <ul class="breadcrumb">
                     <li class="breadcrumb-item"><a href="#">Trang chủ</a></li>
-                    <li class="breadcrumb-item active">Khuyến mãi</li>
+                    <li class="breadcrumb-item active">Sản phẩm</li>
                 </ul>
             </div>
         </div>
     </div>
 </div>
-<!-- End All Title Box -->
