--- a/src/app/member-card/member-card-list/member-card-list.component.html
+++ b/src/app/member-card/member-card-list/member-card-list.component.html
@@ -11,5 +11,8 @@
             </div>
         </div>
         
-        </div>
     </div>
+
+            <input type="text" #nameInput name="username"  required>
+            <button type="submit" class="btn btn-primary"> 
+
