--- a/src/app/product-sale/product-sale.component.html
+++ b/src/app/product-sale/product-sale.component.html
@@ -4,7 +4,13 @@
     <div class="container">
         <div class="row">
             <div class="col-xl-3 col-lg-3 col-sm-12 col-xs-12 sidebar-shop-left">
-                <app-sidebar></app-sidebar>
+                <app-sidebar
+                (onClickAge) = "clickAge($event)"
+                (onClickSex) = "clickSex($event)"
+                (onClickBrand) = "clickBrand($event)"
+                >
+
+                </app-sidebar>
             </div>
             <div class="col-xl-9 col-lg-9 col-sm-12 col-xs-12 shop-content-right">
                 <app-product-sale-list  
