--- a/src/app/product-sale/title-box/title-box.component.html
+++ b/src/app/product-sale/title-box/title-box.component.html
@@ -3,10 +3,10 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
-                <h2>Sản phẩm khuyến mãi</h2>
+                <h2>Shop</h2>
                 <ul class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="#">Trang chủ</a></li>
-                    <li class="breadcrumb-item active">Khuyến mãi</li>
+                    <li class="breadcrumb-item"><a href="#">Home</a></li>
+                    <li class="breadcrumb-item active">Shop</li>
                 </ul>
             </div>
         </div>
