--- a/src/app/product-sale/product-sale.component.html
+++ b/src/app/product-sale/product-sale.component.html
@@ -8,6 +8,7 @@
                 (onClickAge) = "clickAge($event)"
                 (onClickSex) = "clickSex($event)"
                 (onClickBrand) = "clickBrand($event)"
+                (onClickSearch) = "clickSearch($event)"
                 >
 
                 </app-sidebar>
