--- a/src/app/shopping-cart/shopping-cart.component.html
+++ b/src/app/shopping-cart/shopping-cart.component.html
@@ -1,4 +1,4 @@
-<main>
+<!-- <main>
     <header class="container">
         <app-cart-header [numberItems]="numberItems"></app-cart-header>
     </header>
@@ -13,9 +13,8 @@
         <app-pro-code
             (onApplyPromoCode) = "handleApplyPromoCode($event)">
         </app-pro-code>
-        <!-- ---- -->
         <app-summary-cart 
             [summaryCart] = "summaryCart">
         </app-summary-cart>
     </section>
-</main>
+</main> -->
