--- a/src/app/shopping-cart/pro-code/pro-code.component.html
+++ b/src/app/shopping-cart/pro-code/pro-code.component.html
@@ -1,4 +1,4 @@
-<div class="promotion">
+<!-- <div class="promotion">
     <label for="promo-code">Have A Promo Code?</label>
 
     <input 
@@ -12,4 +12,4 @@
     >
     Apply 
     </button>
-</div>
+</div> -->
