--- a/src/app/shopping-cart/product-list/product-list.component.html
+++ b/src/app/shopping-cart/product-list/product-list.component.html
@@ -1,4 +1,4 @@
-<ul class="products">
+<!-- <ul class="products">
     <li class="row" *ngFor="let saleProduct of cart.saleProducts">
       <div class="col left">
         <div class="thumbnail">
@@ -92,3 +92,4 @@
       </div>
     </li>
 </ul>
+ -->
