--- a/src/app/shopping-cart/cart-header/cart-header.component.html
+++ b/src/app/shopping-cart/cart-header/cart-header.component.html
@@ -1,8 +1,8 @@
-<h1>Shopping Cart</h1>
+<!-- <h1>Shopping Cart</h1>
 
 <ul class="breadcrumb">
   <li>Home</li>
   <li>Shopping Cart</li>
 </ul>
 
-<span class="count">{{numberItems}} items in the bag</span>
+<span class="count">{{numberItems}} items in the bag</span> -->
