--- a/src/app/age/sidebar/sidebar.component.html
+++ b/src/app/age/sidebar/sidebar.component.html
@@ -21,12 +21,16 @@
               <span class="checkmark"></span>
             </label>
 
-            <label class="container">Từ 3-6 tuổi
+            <label class="container">Từ 4-6 tuổi
               <input type="checkbox">
               <span class="checkmark"></span>
             </label>
 
-            <label class="container">Từ 6 tuổi trở lên
+            <label class="container">Từ 6-11 tuổi
+              <input type="checkbox">
+              <span class="checkmark"></span>
+            </label>
+            <label class="container">Từ 12 tuổi trở lên
               <input type="checkbox">
               <span class="checkmark"></span>
             </label>
