--- a/src/app/product-sale/product-sale-list/product-sale-list.component.html
+++ b/src/app/product-sale/product-sale-list/product-sale-list.component.html
@@ -6,7 +6,7 @@
                     <option *ngFor="let i of sorters">{{i.value}}</option>
                 </select>
             </div>
-            <p>Tổng cộng có {{allSaleProducts.length}} sản phẩm</p>
+            <p>Tổng cộng có {{getSizeProds}} sản phẩm</p>
         </div>
    <!--      <button #hightToLow value="{priceToBuy,esc}" (click) = "getSaleProductsSorted(hightToLow)">High Price → Low Price> </button> -->
     </div>
