--- a/src/app/product-sale/product-sale.component.html
+++ b/src/app/product-sale/product-sale.component.html
@@ -14,6 +14,7 @@
             </div>
             <div class="col-xl-9 col-lg-9 col-sm-12 col-xs-12 shop-content-right">
                 <app-product-sale-list  
+                [getSizeProds] = "getSizeProds"
                 [allSaleProducts] = "allSaleProducts"
                 [saleProducts] = "saleProducts"
                 [pagination] = "pagination"
