--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 
-<app-header> </app-header>
+<app-header [user] = user> </app-header>
 <router-outlet></router-outlet>
 <app-footer></app-footer>
 
