--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -71,9 +71,9 @@
     }
     .icon {
         height: 50px;
-        width: 50%;
+        width: 60%;
         position: relative;
-        left: 500px;
+        left: 400px;
         a {
             color: rgb(33, 36, 33);
         }
@@ -141,11 +141,14 @@
         }
         .account {
             height: 50px;
-            width: 10%;
+            width: 30%;
             .account-center {
+                height: 80%;
+                width: 100%;
                 font-size: 20px;
                 position: relative;
                 top: 10px;
+                left: 10px
             }
         }
     }
